--- a/Documents/HwajungHighSchoolApply/app/build.gradle
+++ b/Documents/HwajungHighSchoolApply/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.github.eluleci:flatui:3.0.0'
     compile 'info.hoang8f:fbutton:1.0.5'
-    compile 'me.spark:submitbutton:1.0.1'
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
     provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     compile files('libs/jsoup-1.10.2.jar')
 }
