--- a/Documents/HwajungHighSchoolApply/app/src/main/AndroidManifest.xml
+++ b/Documents/HwajungHighSchoolApply/app/src/main/AndroidManifest.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="parkjunu.apply.com.hwajunghighschoolapply">
+    package="parkjunu.apply.com.hwajunghighschoolapply"
+    android:versionCode="@string/app_code"
+    android:versionName="@string/app_version">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -19,17 +24,38 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainSelection" />
-        <activity android:name=".ClassApply" />
         <activity android:name=".Apply" />
         <activity android:name=".ApplyHistory" />
-        <activity android:name=".ClassApplyHistory" />
         <activity android:name=".SettingActivity" />
-        <activity android:name=".SchoolFoodNotice" />
         <activity android:name=".Splash" />
         <activity android:name=".ApplyTable" />
         <activity android:name=".AfterApply" />
         <activity android:name=".AfterApplyHistory" />
-        <activity android:name=".ApplyHistoryTable"></activity>
+        <activity android:name=".ApplyHistoryTable" />
+        <activity android:name=".AfterApplyHistoryTable" />
+        <activity android:name=".AfterApplyTable" />
+
+        <service
+            android:name=".SchoolFood"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".SchoolFoodNotice"
+            android:enabled="true"
+            android:exported="true" />
+
+        <receiver android:name=".BootingSensor">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".Developer_info" />
+
+        <service
+            android:name=".PersistentService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
