--- a/Documents/HwajungHighSchoolApply/app/build.gradle
+++ b/Documents/HwajungHighSchoolApply/app/build.gradle
@@ -22,8 +22,13 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'me.majiajie:pager-bottom-tab-strip:2.1.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.github.eluleci:flatui:3.0.0'
+    compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'info.hoang8f:fbutton:1.0.5'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
