--- a/Documents/HwajungHighSchoolApply/app/build.gradle
+++ b/Documents/HwajungHighSchoolApply/app/build.gradle
@@ -6,8 +6,7 @@ android {
 
     defaultConfig {
         applicationId "parkjunu.apply.com.hwajunghighschoolapply"
-        minSdkVersion 15
-        targetSdkVersion 24
+        minSdkVersion 16
         versionCode 1
         versionName "1.0"
     }
@@ -24,13 +23,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:24.2.0'
     compile 'com.android.support:cardview-v7:24.2.0'
-    compile 'me.majiajie:pager-bottom-tab-strip:2.1.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.github.eluleci:flatui:3.0.0'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'info.hoang8f:fbutton:1.0.5'
-    compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
     provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
-    compile files('libs/jsoup-1.10.2.jar')
 }
